<resources>
  <string name="app_name">TrackTrackTrack</string>
  <string-array name="gps_state_array">
  <item>1초 마다 수신</item>
  <item>3초 마다 수신</item>
  <item>5초 마다 수신</item>
  <item>7초 마다 수신</item>
  <item>10초 마다 수신</item>
  <item>15초 마다 수신</item>
  <item>20초 마다 수신</item>
  </string-array>
  <string name="start_recording">Record track</string>
  <string name="stop_recording">Stop recording</string>
  <string name="switch_to_sat">Satellite Mode</string>
  <string name="switch_to_map">Map Mode</string>
  <string name="mylocation">My Location</string>
  <string name="list_tracks">Tracks</string>
  <string name="list_markers">Markers</string>
  <string name="delete_all_tracks">Delete all tracks</string>
  <string name="settings">Settings</string>
  <string name="elevation">Elevation</string>
  <string name="choose_track_message">Please select the track to view</string>
  <string name="current_track">Current track</string>
  <string name="current_segment">Last segment</string>
  <string name="aggregated_stats">Aggregated Statistics</string>
  <string name="error_no_location_manager">No location manager was found on this device!</string>
  <string name="error_no_gps_location_provider">No GPS location provider was found on this device.</string>
  <string name="error_sending_to_mymap">There was an error while sending your track to Google My Map. Please try again later.</string>
  <string name="error_sending_to_docs">There was an error while sending your track to Google Docs. Please try again later.</string>
  <string name="error_unable_to_start_recording">Unable to start recording. Try again.</string>
  <string name="error_unable_to_stop_recording">Unable to stop recording. Try again.</string>
  <string name="error_unable_to_read_file">Unable to read from file.</string>
  <string name="error_invalid_gpx_format">File does not have a valid GPX format.</string>
  <string name="error_generic">An error occurred. Please try again.</string>
  <string name="error_track_does_not_exist">Track does not exist.</string>
  <string name="error_out_of_memory">This file is too big (must be less than 500 KB). Aborting.</string>
  <string name="error_unable_to_insert_marker">Unable to insert marker. No location fix available.</string>
  <string name="wait_for_fix">Waiting for a better GPS fix. Make sure the sky is visible.</string>
  <string name="status_now_recording">Now recording a new track.</string>
  <string name="status_stopped_recording">Stopped recording your track.</string>
  <string name="status_new_mymap_has_been_created">A new Google My Map has been created at maps.google.com.</string>
  <string name="status_tracks_have_been_uploaded">Your track has been sent to maps.google.com.</string>
  <string name="status_tracks_have_been_uploaded_to_new_doc">Your track has been sent to a new spreadsheet at docs.google.com.</string>
  <string name="status_tracks_have_been_uploaded_to_docs">Your track has been sent to docs.google.com.</string>
  <string name="status_mymap_info">It may sometimes take a few minutes before new tracks appear.</string>
  <string name="status_enable_gps">Please tap here to go to Security and Location Settings and check \'enable GPS satellites\'. Press back button to return.</string>
  <string name="status_approximate_location">Note: An approximate location as determined from cell towers and WIFI networks is shown.</string>
  <string name="status_no_location">A location can currently not be determined. Enable more location sources (see Security and Location Settings) and make sure the sky is visible. Try again later.</string>
  <string name="status_waypoint_inserted">A way point marker was inserted.</string>
  <string name="status_statistics_inserted">A statistics marker was inserted.</string>
  <string name="progress_title">Please wait...</string>
  <string name="progress_message">Sending your track to Google.</string>
  <string name="progress_message_reading_track">Reading track...</string>
  <string name="progress_message_preparing_track">Preparing track...</string>
  <string name="progress_message_authenticating_mymaps">Authenticating to Google Maps...</string>
  <string name="progress_message_authenticating_docs">Authenticating to Google Docs...</string>
  <string name="progress_message_sending_docs">Sending track to Google Docs...</string>
  <string name="progress_message_sending_mymaps">Sending track to Google Maps...</string>
  <string name="progress_message_creating_map">Creating new My Map...</string>
  <string name="import_progress_message">Importing a GPS track. This may take a while.</string>
  <string name="write_progress_message">Writing file to SD card. This may take a while.</string>
  <string name="progress_message_updating_track">Updating track statistics...</string>
  <string name="are_you_sure_question">Are you sure?</string>
  <string name="all_data_will_be_permanently_deleted">All tracks and markers will be deleted from this phone.</string>
  <string name="track_will_be_permanently_deleted">The track and its markers will be permanently deleted from this phone.</string>
  <string name="marker_will_be_permanently_deleted">The marker will be permanently deleted from this phone.</string>
  <string name="new_map_description">Created by My Tracks on Android.</string>
  <string name="my_map_link">Created by &lt;a href=\'http://mytracks.appspot.com\'&gt;My Tracks&lt;/a&gt; on Android.</string>
  <string name="new_map_title">New map</string>
  <string name="points">Points</string>
  <string name="recorded_date">Recorded</string>
  <string name="category">Activity type</string>
  <string name="waypoint_category">Marker type</string>
  <string name="part">(Part %d)</string>
  <string name="recording_your_track">Recording your track...</string>
  <string name="new_track">Track %d</string>
  <string name="no">No</string>
  <string name="yes">Yes</string>
  <string name="ok">OK</string>
  <string name="error">Error</string>
  <string name="success">Success</string>
  <string name="waypoint">Waypoint</string>
  <string name="start">(Start)</string>
  <string name="end">(End)</string>
  <string name="tracklist_show_track">Show</string>
  <string name="tracklist_send_to_mymaps">Send to Google My Maps</string>
  <string name="tracklist_send_to_new_mymap">Send to New Google My Map</string>
  <string name="tracklist_send_to_docs">Send to Google Docs</string>
  <string name="tracklist_send_to_google">Send to Google...</string>
  <string name="tracklist_delete_track">Delete from phone...</string>
  <string name="tracklist_edit_track">Edit details</string>
  <string name="tracklist_write_to_sd">Write to SD card...</string>
  <string name="tracklist_save_as_gpx">Save a GPX file</string>
  <string name="tracklist_save_as_kml">Save a KML file</string>
  <string name="tracklist_save_as_csv">Save a CSV file</string>
  <string name="tracklist_save_as_tcx">Save a TCX file</string>
  <string name="tracklist_btn_send_all_to_mymaps">Send to Google My Maps</string>
  <string name="tracklist_btn_delete_all">Delete all tracks</string>
  <string name="tracklist_btn_export_all">Export all tracks</string>
  <string name="export_done">Export finished</string>
  <string name="tracklist_pick_one">Pick a track. Press&amp;hold for more options.</string>
  <string name="tracklist_all_tracks">All Tracks:</string>
  <string name="tracklist_this_track">This Track</string>
  <string name="tracklist_share_track">Share with Friends...</string>
  <string name="tracklist_share_link">A link to Google My Map</string>
  <string name="tracklist_share_gpx_file">A GPX file</string>
  <string name="tracklist_share_kml_file">A KML file</string>
  <string name="tracklist_share_csv_file">A CSV file</string>
  <string name="tracklist_share_tcx_file">A TCX file</string>
  <string name="tracklist_clear_map">Clear map</string>
  <string name="waypointslist_btn_delete_all">Delete all markers</string>
  <string name="waypointslist_this_waypoint">This Marker</string>
  <string name="waypointslist_delete_waypoint">Delete</string>
  <string name="waypointslist_edit_waypoint">Edit details</string>
  <string name="waypointslist_show_waypoint">Show on map</string>
  <string name="waypointslist_btn_insert_waypoint">Insert waypoint</string>
  <string name="waypointslist_btn_insert_statistics">Insert statistics</string>
  <string name="waypointslist_pick_one">Pick a marker. Press&amp;hold for more options.</string>
  <string name="trackdetails_title">Track Details</string>
  <string name="trackdetails_name">Track Name</string>
  <string name="trackdetails_description">Track Description</string>
  <string name="trackdetails_category">Activity Type (e.g. hiking, cycling, running, climbing...)</string>
  <string name="waypointdetails_title">Marker Details</string>
  <string name="waypointdetails_name">Marker Name</string>
  <string name="waypointdetails_description">Marker Description</string>
  <string name="waypointdetails_category">Marker Type (e.g. Building, Pothole, Sight...)</string>
  <string name="mytracks_settings">My Tracks Settings</string>
  <string name="settings_display">Display</string>
  <string name="settings_recording">Recording</string>
  <string name="settings_sharing">Sharing</string>
  <string name="settings_not_available_summary">Not available in your version of Android</string>
  <string name="settings_announcement_frequency">Announcement frequency</string>
  <string name="settings_announcement_frequency_summary">Minimum time between two voice announcements</string>
  <string name="settings_min_recording_distance">Min distance between points</string>
  <string name="settings_min_recording_distance_summary">Smallest distance between two recordings of your position</string>
  <string name="settings_max_recording_distance">Max distance between points</string>
  <string name="settings_max_recording_distance_summary">If two points are further than this, the track will be split</string>
  <string name="settings_min_recording_interval">Min time between points</string>
  <string name="settings_min_recording_interval_summary">Smallest time interval between two recordings of your position</string>
  <string name="settings_min_required_accuracy">Minimum accuracy</string>
  <string name="settings_min_required_accuracy_summary">Recording will be paused if your position is not at least this accurate</string>
  <string name="settings_metric_units">Use metric units</string>
  <string name="settings_metric_units_summary_on">All distances will be displayed in metric units</string>
  <string name="settings_metric_units_summary_off">All distances will be displayed in imperial units</string>
  <string name="settings_map_public">Make maps public</string>
  <string name="settings_map_public_summary_on">Uploaded maps will be visible to anyone on maps.google.com</string>
  <string name="settings_map_public_summary_off">Uploaded maps will not be listed publicly on maps.google.com</string>
  <string name="settings_report_speed_or_pace">Display speed</string>
  <string name="settings_report_speed_or_pace_summary_on">Speed will be displayed</string>
  <string name="settings_report_speed_or_pace_summary_off">Pace will be displayed</string>
  <string name="settings_share_url_only">Share only URL</string>
  <string name="average_speed_label">평균 속력</string>
  <string name="latitude_label">Latitude</string>
  <string name="longitude_label">Longitude</string>
  <string name="sec">sec</string>
  <string name="step">step</string>
  <string name="kcal">Kcal</string>
  <string name="meter">m</string>
  <string name="gps_state_label">현재 상태</string>
  <string name="total_time_label">총 시간</string>
  <string name="walking_label">총 걸음수</string>
  <string name="calorie_label">소모된 칼로리</string>
  <string name="now_speed_label">현재 속력</string>
  <string name="total_distance_label">총 이동한 거리</string>
  <string name="button_label">Button Control List</string>
  <string name="unknown">-</string>
</resources>